--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,5 @@
 ---
 import Main from "../components/Main.astro";
-import { fontFamily, fontSize } from "../styles/css-variables";
 ---
 
 <html lang="en">
@@ -16,11 +15,17 @@ import { fontFamily, fontSize } from "../styles/css-variables";
 	</body>
 </html>
 
-<style define:vars={{ fontFamily, fontSize }}>
+<style>
+	:root {
+		--font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
+			Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+		--font-size: 24px;
+	}
+
 	body {
 		margin-top: 2em;
-		font-family: var(--fontFamily);
-		font-size: var(--fontSize);
+		font-family: var(--font-family);
+		font-size: var(--font-size);
 		text-align: center;
 	}
 </style>
