--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,18 +24,20 @@ import Main from "../components/Main.astro";
 		--font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
 			Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 		--font-size: 24px;
-		--container-row-gap: 0.2em;
+		--container-row-gap: 0.3em;
 		--variable-flex-direction: row;
 		--select-margin-left: 0.2em;
+		--time-not-seconds-max-width: 2em;
+		--time-seconds-max-width: 2.75em;
 	}
 
 	@media screen and (max-width: 700px) {
 		:root {
 			--font-size: 18px;
-
 			--container-row-gap: 1em;
 			--variable-flex-direction: column;
 			--select-margin-left: 0;
+			--time-not-seconds-max-width: var(--time-seconds-max-width);
 		}
 	}
 
