--- a/src/components/VariableData.astro
+++ b/src/components/VariableData.astro
@@ -1,9 +1,10 @@
-<div class="variable-data"><slot /></div>
+<div><slot /></div>
 
 <style>
 	div {
 		display: flex;
 		flex-direction: var(--variable-flex-direction);
 		row-gap: 0.3em;
+		align-items: var(--variable-flex-align-items);
 	}
 </style>
