--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,7 +25,10 @@ import Main from "../components/Main.astro";
 			Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 		--font-size: 24px;
 		--container-row-gap: 0.3em;
+		--container-column-gap: 2em;
 		--variable-flex-direction: row;
+		--variable-flex-align-items: center;
+		--variable-multiple-flex-direction: column;
 		--select-margin-left: 0.2em;
 		--time-not-seconds-max-width: 2em;
 		--time-seconds-max-width: 2.75em;
@@ -34,8 +37,11 @@ import Main from "../components/Main.astro";
 	@media screen and (max-width: 700px) {
 		:root {
 			--font-size: 18px;
-			--container-row-gap: 1em;
+			--container-row-gap: 2em;
+			--container-column-gap: 1em;
 			--variable-flex-direction: column;
+			--variable-flex-align-items: flex-start;
+			--variable-multiple-flex-direction: row;
 			--select-margin-left: 0;
 			--time-not-seconds-max-width: var(--time-seconds-max-width);
 		}
