--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,13 @@ import Main from "../components/Main.astro";
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link
+			rel="icon"
+			type="image/png"
+			href="/pace-calculator/favicon.png"
+			title="Time icons created by Smashicons - Flaticon"
+		/>
+		<link rel="apple-touch-icon" href="/pace-calculator/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		<meta
