Improve layout on small devices

--- a/src/components/VariableDataMultiple.astro
+++ b/src/components/VariableDataMultiple.astro
@@ -4,7 +4,7 @@
 	div {
 		display: flex;
 		flex-direction: var(--variable-multiple-flex-direction);
-		row-gap: 0.3em;
+		row-gap: var(--variable-multiple-row-gap);
 		align-items: flex-start;
 		column-gap: 1em;
 	}
